--- a/docs/contributing.mdx
+++ b/docs/contributing.mdx
@@ -11,6 +11,12 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 Your interest in contributing to Open WebUI is greatly appreciated. This document is here to guide you through the process, ensuring your contributions enhance the project effectively. Let's make Open WebUI even better, together!
 
+## 📜 Code of Conduct
+
+All contributors and community participants are expected to follow our **[Code of Conduct](https://github.com/open-webui/open-webui/blob/main/CODE_OF_CONDUCT.md)**. We operate under a **zero-tolerance policy** — disrespectful, demanding, or hostile behavior will result in immediate action without prior warning.
+
+Our community is built on the work of volunteers who dedicate their free time to this project. Please treat every interaction with professionalism and respect.
+
 ## 💡 Contributing
 
 Looking to contribute? Great! Here's how you can help:
@@ -79,7 +85,7 @@ Let's make Open WebUI usable for *everyone*.
 
 ### 🤔 Questions & Feedback
 
-Got questions or feedback? Join our [Discord community](https://discord.gg/5rJgQTnV4s) or open an issue. We're here to help!
+Got questions or feedback? Join our [Discord community](https://discord.gg/5rJgQTnV4s), visit our [Reddit](https://www.reddit.com/r/OpenWebUI/), or open an issue. We're here to help!
 
 ### 🚨 Reporting Issues
 
@@ -90,6 +96,8 @@ Noticed something off? Have an idea? Check our [Issues tab](https://github.com/o
 - **Template Compliance:** Please be aware that failure to follow the provided issue template, or not providing the requested information at all, will likely result in your issue being closed without further consideration. This approach is critical for maintaining the manageability and integrity of issue tracking.
 
 - **Detail is Key:** To ensure your issue is understood and can be effectively addressed, it's imperative to include comprehensive details. Descriptions should be clear, including steps to reproduce, expected outcomes, and actual results. Lack of sufficient detail may hinder our ability to resolve your issue.
+
+- **Respectful Communication:** All interactions — including issue reports and discussions — fall under our **[Code of Conduct](https://github.com/open-webui/open-webui/blob/main/CODE_OF_CONDUCT.md)**. Hostile, entitled, or demanding behavior toward contributors will not be tolerated.
 
 :::
 
