--- a/docs/features/rbac/index.mdx
+++ b/docs/features/rbac/index.mdx
@@ -7,7 +7,7 @@ Open WebUI implements a flexible and secure **Role-Based Access Control (RBAC)**
 
 1.  [**Roles**](./roles.md): The high-level user type (Admin, User, Pending). This defines the baseline trust level.
 2.  [**Permissions**](./permissions.md): Granular feature flags (e.g., "Can Delete Chats", "Can Use Web Search").
-3.  [**Groups**](./groups.md): The mechanism for organizing users, granting additional permissions, and managing shared access to resources (ACLs).
+3.  [**Groups**](./groups.md): The mechanism for organizing users, granting additional permissions, and managing shared access to resources (ACLs). Resources can also be shared directly to individual users.
 
 :::info Key Concept: Additive Permissions
 The security model is **Additive**. Users start with their default rights, and Group memberships **add** capabilities. A user effectively has the *union* of all rights granted by their Roles and Groups.
@@ -27,4 +27,4 @@ The security model is **Additive**. Users start with their default rights, and G
 *   [‍🔐 **Groups**](./groups.md)
     *   Learn how to structure teams and projects.
     *   **Strategy**: Distinguish between "Permission Groups" (for rights) and "Sharing Groups" (for access).
-    *   Manage Access Control Lists (ACLs) for private Models and Knowledge. 
+    *   Manage Access Control Lists (ACLs) for private Models and Knowledge — share with groups or individual users.
