add Vercel AI Gateway to proxies and aggregators list

--- a/docs/getting-started/quick-start/starting-with-openai.mdx
+++ b/docs/getting-started/quick-start/starting-with-openai.mdx
@@ -31,7 +31,7 @@ You can use:
 - **Google Gemini** (via their [OpenAI-compatible endpoint](https://generativelanguage.googleapis.com/v1beta/openai/))
 - **DeepSeek** (https://platform.deepseek.com/)
 - **MiniMax** (https://platform.minimax.io/)
-- **Proxies & Aggregators**: OpenRouter, LiteLLM, Helicone.
+- **Proxies & Aggregators**: OpenRouter, LiteLLM, Helicone, Vercel AI Gateway.
 - **Local Servers**: Ollama, Llama.cpp, LM Studio, vLLM, LocalAI.
 
 ---
@@ -50,7 +50,7 @@ Once Open WebUI is running:
 <Tabs>
   <TabItem value="standard" label="Standard / Compatible" default>
 
-  Use this for **OpenAI**, **DeepSeek**, **MiniMax**, **OpenRouter**, **LocalAI**, **FastChat**, **Helicone**, **LiteLLM**, etc.
+  Use this for **OpenAI**, **DeepSeek**, **MiniMax**, **OpenRouter**, **LocalAI**, **FastChat**, **Helicone**, **LiteLLM**, **Vercel AI Gateway** etc.
 
   *   **Connection Type**: External
   *   **URL**: `https://api.openai.com/v1` (or your provider's endpoint)
