--- a/docs/features/workspace/index.mdx
+++ b/docs/features/workspace/index.mdx
@@ -11,5 +11,6 @@ The Workspace in Open WebUI provides a comprehensive environment for managing yo
 - [🧠 Knowledge](./knowledge.md) - Manage your knowledge bases for retrieval augmented generation
 - [📚 Prompts](./prompts.md) - Create and organize reusable prompts
 - [📁 Files](./files.md) - Centralized management for all your uploaded documents
+- [📝 Skills](./skills.md) - Reusable markdown instruction sets for guiding model behavior
 
 Each section of the Workspace is designed to give you fine-grained control over your Open WebUI experience, allowing for customization and optimization of your AI interactions.
