ACTIONS RICH UI

--- a/docs/features/plugin/functions/action.mdx
+++ b/docs/features/plugin/functions/action.mdx
@@ -316,5 +316,6 @@ Actions integrate seamlessly with other Open WebUI features:
 - **Files** - Actions can process uploaded files and generate new ones
 - **Memory** - Actions can access conversation history and context
 - **Permissions** - Actions respect user roles and access controls
+- **[Rich UI Embedding](/features/plugin/development/rich-ui)** - Actions can return HTML content that renders as interactive iframes in the chat
 
 For more examples and community-contributed actions, visit [https://openwebui.com/search](https://openwebui.com/search) where you can discover, download, and explore custom functions built by the Open WebUI community.
