update lemonade docs
Signed-off-by: Sawan Srivastava <sawan1210@gmail.com>

--- a/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
+++ b/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
@@ -43,18 +43,18 @@ There are many servers and tools that expose an OpenAI-compatible API. Pick whic
 
 Lemonade is a plug-and-play ONNX-based OpenAI-compatible server. Here’s how to try it on Windows:
 
-1. [Download the latest `.exe`](https://github.com/lemonade-sdk/lemonade)
+1. [Download the latest `.exe`](https://github.com/lemonade-sdk/lemonade/releases)
 2. Run `Lemonade_Server_Installer.exe`
 3. Install and download a model using Lemonade’s installer
 4. Once running, your API endpoint will be:
 
    ```
-   http://localhost:8000/api/v0
+   http://localhost:8000/api/v1
    ```
 
 ![Lemonade Server](/images/getting-started/lemonade-server.png)
 
-See [their docs](https://lemonade-server.ai/) for details.
+See [their docs](https://lemonade-server.ai/docs/server/apps/open-webui/) for details.
 
 ---
 
@@ -89,7 +89,7 @@ If running Open WebUI in Docker and your model server on your host machine, use 
 
 :::
 
-##### **For Lemonade:**  When adding Lemonade, use `http://localhost:8000/api/v0` as the URL.
+##### **For Lemonade:**  When adding Lemonade, use `http://localhost:8000/api/v1` as the URL.
 
 ![Lemonade Connection](/images/getting-started/lemonade-connection.png)
 
