--- a/docs/troubleshooting/connection-error.mdx
+++ b/docs/troubleshooting/connection-error.mdx
@@ -69,7 +69,7 @@ The `CORS_ALLOW_ORIGIN` setting is crucial for WebSocket functionality. If you s
 
 ### Reverse Proxy / SSL/TLS Configuration
 
-For reverse proxy and TLS setups, check our [tutorials here](/category/https).
+For reverse proxy and TLS setups, check our [tutorials here](/reference/https).
 
 ### WebSocket Troubleshooting
 
